# Pearlite

./: .gitignore  .rusty-hook.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  audit.toml  clippy.toml  deny.toml  justfile  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  vm.yml
crates/pearlite-audit/: Cargo.toml
crates/pearlite-audit/src/: lib.rs  main.rs
crates/pearlite-cargo/: Cargo.toml
crates/pearlite-cargo/src/: errors.rs  inventory.rs  lib.rs  live.rs  mock.rs
crates/pearlite-cli/: Cargo.toml
crates/pearlite-cli/src/: agents.rs  args.rs  dispatch.rs  envelope.rs  lib.rs  main.rs  render.rs
crates/pearlite-diff/: Cargo.toml
crates/pearlite-diff/src/: action.rs  coherence.rs  compose.rs  lib.rs  order.rs  phase.rs  plan.rs
crates/pearlite-diff/src/classify/: cargo.rs  config.rs  mod.rs  pacman.rs  services.rs  user_env.rs
crates/pearlite-engine/: Cargo.toml
crates/pearlite-engine/src/: apply.rs  bootstrap.rs  errors.rs  lib.rs  mock_probe.rs  plan.rs  probe.rs  reconcile.rs  rollback.rs
crates/pearlite-fs/: Cargo.toml
crates/pearlite-fs/src/: atomic.rs  chown.rs  errors.rs  hash.rs  inventory.rs  lib.rs
crates/pearlite-nickel/: Cargo.toml
crates/pearlite-nickel/src/: emit.rs  errors.rs  lib.rs  live.rs  mock.rs
crates/pearlite-pacman/: Cargo.toml
crates/pearlite-pacman/src/: errors.rs  inventory.rs  lib.rs  live.rs  mock.rs  repos.rs
crates/pearlite-schema/: Cargo.toml
crates/pearlite-schema/src/: config.rs  declared.rs  errors.rs  host.rs  lib.rs  nix.rs  packages.rs  parse.rs  probed.rs  services.rs  snapshots.rs  users.rs  validate.rs
crates/pearlite-snapper/: Cargo.toml
crates/pearlite-snapper/src/: errors.rs  lib.rs  list.rs  live.rs  mock.rs
crates/pearlite-state/: Cargo.toml
crates/pearlite-state/src/: errors.rs  failure.rs  history.rs  io.rs  lib.rs  migrate.rs  mock.rs  reconciliation.rs  schema.rs  store.rs
crates/pearlite-systemd/: Cargo.toml
crates/pearlite-systemd/src/: errors.rs  inventory.rs  lib.rs  live.rs  mock.rs
crates/pearlite-userenv/: Cargo.toml
crates/pearlite-userenv/src/: errors.rs  installer.rs  lib.rs  live.rs  mock.rs
docs/adr/: 0008-msrv-bump-policy.md  0009-cachyos-ci-runner.md  0010-plan-file-schema-stability.md  0011-prune-drift-threshold.md  0012-nix-bootstrap-wiring.md  0013-per-user-nix-conf.md  0014-reconcile-commit-design.md  README.md
docs/retrospectives/: M0.md  M1.md  M2.md  M3.md
fixtures/nickel/: host_minimal.ncl
fixtures/schema/: host_full.toml  host_invalid_arch.toml  host_malformed_mode.toml  host_minimal.toml
packaging/pearlite/: PKGBUILD
packaging/pearlite-bin/: PKGBUILD
packaging/pearlite-git/: PKGBUILD
scripts/ci/: check-spdx.sh  run-vm-tests.sh
tests/vm/: README.md  vm-01-bootstrap-and-plan.sh  vm-02-installs.sh  vm-03-removes.sh  vm-04-config-write.sh  vm-05-rollback.sh  vm-06-failure-record.sh  vm-07-user-env-apply.sh  vm-08-user-env-drift.sh  vm-09-nix-bootstrap.sh  vm-10-reconcile-fresh-install.sh  vm-11-reconcile-commit.sh
