[workspace]
resolver = "3"
members = [
    "crates/pearlite-schema",
    "crates/pearlite-state",
    "crates/pearlite-diff",
    "crates/pearlite-fs",
    "crates/pearlite-nickel",
    "crates/pearlite-pacman",
    "crates/pearlite-cargo",
    "crates/pearlite-systemd",
    "crates/pearlite-snapper",
    "crates/pearlite-userenv",
    "crates/pearlite-engine",
    "crates/pearlite-cli",
    "crates/pearlite-audit",
]

[workspace.package]
version = "0.1.0"
authors = ["Mohamed Hammad <unbreakablemj@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
repository = "https://github.com/Steelbore/Pearlite"
homepage = "https://github.com/Steelbore/Pearlite"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "serde-well-known"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
schemars = "0.8"
sha2 = "0.10"
tempfile = "3"
rayon = "1"
uuid = { version = "1", features = ["v7", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
