[package]
name = "pearlite-cargo"
description = "cargo install adapter for Pearlite."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
test-mocks = []

[dependencies]
pearlite-schema = { path = "../pearlite-schema", version = "0.1" }
thiserror = { workspace = true }
