[package]
name = "pearlite-cli"
description = "Pearlite command-line interface."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "pearlite"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
pearlite-cargo = { path = "../pearlite-cargo", version = "0.1" }
pearlite-diff = { path = "../pearlite-diff", version = "0.1" }
pearlite-engine = { path = "../pearlite-engine", version = "0.1" }
pearlite-nickel = { path = "../pearlite-nickel", version = "0.1" }
pearlite-pacman = { path = "../pearlite-pacman", version = "0.1" }
pearlite-schema = { path = "../pearlite-schema", version = "0.1" }
pearlite-state = { path = "../pearlite-state", version = "0.1" }
pearlite-systemd = { path = "../pearlite-systemd", version = "0.1" }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pearlite-engine = { path = "../pearlite-engine", version = "0.1", features = ["test-mocks"] }
pearlite-nickel = { path = "../pearlite-nickel", version = "0.1", features = ["test-mocks"] }
tempfile = { workspace = true }
