[package]
name = "pearlite-cli"
description = "Pearlite command-line interface."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "pearlite"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
pearlite-cargo = { path = "../pearlite-cargo", version = "0.1" }
pearlite-engine = { path = "../pearlite-engine", version = "0.1" }
pearlite-nickel = { path = "../pearlite-nickel", version = "0.1" }
pearlite-pacman = { path = "../pearlite-pacman", version = "0.1" }
pearlite-state = { path = "../pearlite-state", version = "0.1" }
pearlite-systemd = { path = "../pearlite-systemd", version = "0.1" }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
# pearlite-diff / pearlite-schema / schemars / thiserror / uuid arrive
# in M2+ when the apply path and per-provider schema rendering need them.

[dev-dependencies]
pearlite-engine = { path = "../pearlite-engine", version = "0.1", features = ["test-mocks"] }
pearlite-nickel = { path = "../pearlite-nickel", version = "0.1", features = ["test-mocks"] }
tempfile = { workspace = true }
