[package]
name = "pearlite-cli"
description = "Pearlite command-line interface."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "pearlite"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
pearlite-cargo = { path = "../pearlite-cargo", version = "0.1" }
pearlite-diff = { path = "../pearlite-diff", version = "0.1" }
pearlite-engine = { path = "../pearlite-engine", version = "0.1" }
pearlite-nickel = { path = "../pearlite-nickel", version = "0.1" }
pearlite-pacman = { path = "../pearlite-pacman", version = "0.1" }
pearlite-snapper = { path = "../pearlite-snapper", version = "0.1" }
pearlite-state = { path = "../pearlite-state", version = "0.1" }
pearlite-systemd = { path = "../pearlite-systemd", version = "0.1" }
pearlite-userenv = { path = "../pearlite-userenv", version = "0.1" }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
# pearlite-schema / schemars / thiserror arrive in M5 when per-provider
# schema rendering needs them.

[dev-dependencies]
pearlite-cargo = { path = "../pearlite-cargo", version = "0.1", features = ["test-mocks"] }
pearlite-engine = { path = "../pearlite-engine", version = "0.1", features = ["test-mocks"] }
pearlite-nickel = { path = "../pearlite-nickel", version = "0.1", features = ["test-mocks"] }
pearlite-pacman = { path = "../pearlite-pacman", version = "0.1", features = ["test-mocks"] }
pearlite-schema = { path = "../pearlite-schema", version = "0.1" }
pearlite-snapper = { path = "../pearlite-snapper", version = "0.1", features = ["test-mocks"] }
pearlite-state = { path = "../pearlite-state", version = "0.1" }
pearlite-systemd = { path = "../pearlite-systemd", version = "0.1", features = ["test-mocks"] }
pearlite-userenv = { path = "../pearlite-userenv", version = "0.1", features = ["test-mocks"] }
tempfile = { workspace = true }
