[package]
name = "pearlite-diff"
description = "Compute Pearlite plans from declared, probed, and stored state."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
