[package]
name = "pearlite-diff"
description = "Compute Pearlite plans from declared, probed, and stored state."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
schemars = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
# pearlite-schema, pearlite-state, thiserror arrive in chunk M1-W3-B
# with the classification logic that consumes them.
