[package]
name = "pearlite-diff"
description = "Compute Pearlite plans from declared, probed, and stored state."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
pearlite-schema = { path = "../pearlite-schema", version = "0.1" }
pearlite-state = { path = "../pearlite-state", version = "0.1" }
serde = { workspace = true }
schemars = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = "1"
