[package]
name = "pearlite-engine"
description = "Pearlite orchestrator: probe, diff, apply, rollback, reconcile."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
