[package]
name = "pearlite-fs"
description = "Filesystem primitives for Pearlite: sha256, atomic write, config inventory."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
pearlite-schema = { path = "../pearlite-schema" }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
nix = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
