[package]
name = "pearlite-nickel"
description = "Nickel evaluator adapter for Pearlite host configurations."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
test-mocks = []

[dependencies]
pearlite-schema = { path = "../pearlite-schema", version = "0.1" }
thiserror = { workspace = true }

[dev-dependencies]
time = { workspace = true }
