[package]
name = "pearlite-schema"
description = "Resolved configuration types for Pearlite."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
time = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
