[package]
name = "pearlite-snapper"
description = "Snapper btrfs-snapshot adapter for Pearlite."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
test-mocks = []

[dependencies]
serde = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
