[package]
name = "pearlite-state"
description = "Atomic, schema-versioned read/write of Pearlite's state.toml."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# Exposes MockFs to downstream crates for engine integration tests.
test-mocks = []

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = "1"
