[package]
name = "pearlite-systemd"
description = "systemctl adapter for Pearlite service management."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
