[package]
name = "pearlite-userenv"
description = "Home Manager and Nix user-environment adapter for Pearlite."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
