[package]
name = "pearlite-userenv"
description = "Home Manager and Nix user-environment adapter for Pearlite."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
test-mocks = []

[dependencies]
pearlite-fs = { path = "../pearlite-fs", version = "0.1" }
pearlite-schema = { path = "../pearlite-schema", version = "0.1" }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
